ILog instance and IsXXXEnabled values are stored in static fields.

--- a/Log4PostSharp/Log4PostSharp.Weaver/Log4PostSharp.Weaver.csproj
+++ b/Log4PostSharp/Log4PostSharp.Weaver/Log4PostSharp.Weaver.csproj
@@ -47,6 +47,7 @@
     <Compile Include="LogAdvice.cs" />
     <Compile Include="LogLevelSupportItem.cs" />
     <Compile Include="LogTask.cs" />
+    <Compile Include="PerTypeLoggingData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
