--- a/PostSharp.AspNet/PostSharp.AspNet.Test/Web.config
+++ b/PostSharp.AspNet/PostSharp.AspNet.Test/Web.config
@@ -1,49 +1,34 @@
 <?xml version="1.0"?>
 <configuration>
+	<!-- Add a configuration handler for PostSharp. -->
 	<configSections>
 		<section name="postsharp" type="PostSharp.AspNet.Configuration.PostSharpConfiguration, PostSharp.AspNet"/>
 	</configSections>
+	<!-- PostSharp configuration -->
 	<postsharp directory="P:\open\branches\1.0\Core\PostSharp.MSBuild\bin\Debug" trace="true">
 		<parameters>
-			<add name="SignAssembly" value="False"/>
-			<add name="PrivateKeyLocation" value=""/>
+			<!--
+			<add name="parameter-name" value="parameter-value"/>
+         -->
 		</parameters>
-    <searchPath>
-      <add name="bin" value="~\bin"/>
-      <add name="laos-weaver" value="P:\open\branches\1.0\Laos\PostSharp.Laos.Weaver\bin\Debug"/>
-    </searchPath>
+		<searchPath>
+			<!-- Always add the binary folder to the search path. -->
+			<add name="bin" value="~\bin"/>
+			<!-- Then add the location of plug-ins that are not installed in standard locations. -->
+			<add name="laos-weaver" value="P:\open\branches\1.0\Laos\PostSharp.Laos.Weaver\bin\Debug"/>
+		</searchPath>
 	</postsharp>
 	<appSettings/>
 	<connectionStrings/>
 	<system.web>
-		<!-- 
-            Set compilation debug="true" to insert debugging 
-            symbols into the compiled page. Because this  
-            
-            affects performance, set this value to true only 
-            during development.
-        -->
+		<!-- Note the 'assemblyPostProcessorType' attribute. -->
 		<compilation debug="true" assemblyPostProcessorType="PostSharp.AspNet.AssemblyPostProcessor, PostSharp.AspNet">
+			<!--			<assemblies>
+				<add assembly="ISymWrapper, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+      </assemblies>-->
 			<assemblies>
 				<add assembly="ISymWrapper, Version=2.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/></assemblies></compilation>
-		<!--
-            The <authentication> section enables configuration 
-            of the security authentication mode used by 
-            ASP.NET to identify an incoming user. 
-        -->
-		<authentication mode="Windows"/>
+		<authentication mode="None"/>
 		<trace enabled="true" pageOutput="true"/>
-		<!--
-            The <customErrors> section enables configuration 
-            of what to do if/when an unhandled error occurs 
-            during the execution of a request. Specifically, 
-            it enables developers to configure html error pages 
-            to be displayed in place of a error stack trace.
-
-        <customErrors mode="RemoteOnly" defaultRedirect="GenericErrorPage.htm">
-            <error statusCode="403" redirect="NoAccess.htm" />
-            <error statusCode="404" redirect="FileNotFound.htm" />
-        </customErrors>
-        -->
 	</system.web>
 </configuration>
