--- a/Log4PostSharp/Log4PostSharp.Weaver/Log4PostSharp.Weaver.csproj
+++ b/Log4PostSharp/Log4PostSharp.Weaver/Log4PostSharp.Weaver.csproj
@@ -44,11 +44,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FixedToken.cs" />
+    <Compile Include="IMessageToken.cs" />
     <Compile Include="LogAdvice.cs" />
     <Compile Include="LogLevelSupportItem.cs" />
     <Compile Include="LogTask.cs" />
+    <Compile Include="ParameterValueToken.cs" />
     <Compile Include="PerTypeLoggingData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TemplateParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Log4PostSharp\Log4PostSharp.csproj">
