Added return value logging.

--- a/Log4PostSharp/Log4PostSharp.Weaver/Log4PostSharp.Weaver.csproj
+++ b/Log4PostSharp/Log4PostSharp.Weaver/Log4PostSharp.Weaver.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ParameterValueToken.cs" />
     <Compile Include="PerTypeLoggingData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReturnValueToken.cs" />
     <Compile Include="TemplateParser.cs" />
   </ItemGroup>
   <ItemGroup>
