--- a/Log4PostSharp/Log4PostSharp.Test/Log4PostSharp.Test.csproj
+++ b/Log4PostSharp/Log4PostSharp.Test/Log4PostSharp.Test.csproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\log4net.dll</HintPath>
     </Reference>
     <Reference Include="PostSharp.Public, Version=1.0.7.258, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
       <HintPath>$(POSTSHARP_SRC)\Core\PostSharp.Public\bin\debug\PostSharp.Public.dll</HintPath>
