--- a/PostSharp.AspNet/PostSharp.AspNet.Test/Web.config
+++ b/PostSharp.AspNet/PostSharp.AspNet.Test/Web.config
@@ -5,7 +5,7 @@
 		<section name="postsharp" type="PostSharp.AspNet.Configuration.PostSharpConfiguration, PostSharp.AspNet"/>
 	</configSections>
 	<!-- PostSharp configuration -->
-	<postsharp directory="P:\open\branches\1.0\Core\PostSharp.MSBuild\bin\Debug" trace="true">
+	<postsharp directory="P:\branches\1.0\Core\PostSharp.MSBuild\bin\Debug" trace="true">
 		<parameters>
 			<!--
 			<add name="parameter-name" value="parameter-value"/>
@@ -15,7 +15,7 @@
 			<!-- Always add the binary folder to the search path. -->
 			<add name="bin" value="~\bin"/>
 			<!-- Then add the location of plug-ins that are not installed in standard locations. -->
-			<add name="laos-weaver" value="P:\open\branches\1.0\Laos\PostSharp.Laos.Weaver\bin\Debug"/>
+			<add name="laos-weaver" value="P:\branches\1.0\Laos\PostSharp.Laos.Weaver\bin\Debug"/>
 		</searchPath>
 	</postsharp>
 	<appSettings/>
