--- a/DesignByContract/TestApplication2PostSharp1_5/TestApplication2PostSharp1_5.csproj
+++ b/DesignByContract/TestApplication2PostSharp1_5/TestApplication2PostSharp1_5.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{15F3F4A6-B98A-4B0C-9A99-58EF4D658504}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{F4604CCA-E325-4F2D-BCA7-F64F7B18D2CD}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestApplicationLibaryPostSharp1_5</RootNamespace>
-    <AssemblyName>TestApplicationLibaryPostSharp1_5</AssemblyName>
+    <RootNamespace>TestApplication2PostSharp1_5</RootNamespace>
+    <AssemblyName>TestApplication2PostSharp1_5</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=2.4.6.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="PostSharp.Laos, Version=1.5.0.0, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
@@ -39,17 +42,52 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AbstractClass.cs" />
-    <Compile Include="IContractInterface.cs" />
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="UnitTest\UnitTestsAbstractClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Aspect.DesignByContract\Aspect.DesignByContract.csproj">
       <Project>{52B74DE9-7035-4A55-9994-12A7DC435405}</Project>
       <Name>Aspect.DesignByContract</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TestApplicationLibaryPostSharp1_5\TestApplicationLibaryPostSharp1_5.csproj">
+      <Project>{15F3F4A6-B98A-4B0C-9A99-58EF4D658504}</Project>
+      <Name>TestApplicationLibaryPostSharp1_5</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
