--- a/DesignByContract/TestApplicationPostSharp1_5/TestApplicationPostSharp1_5.csproj
+++ b/DesignByContract/TestApplicationPostSharp1_5/TestApplicationPostSharp1_5.csproj
@@ -78,7 +78,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="UnitTest\UnitTests.cs" />
+    <Compile Include="UnitTest\UnitTestsIContractInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Aspect.DesignByContract\Aspect.DesignByContract.csproj">
