--- a/DesignByContract/Aspect.DesignByContract/Aspect.DesignByContract.csproj
+++ b/DesignByContract/Aspect.DesignByContract/Aspect.DesignByContract.csproj
@@ -33,9 +33,11 @@
   <ItemGroup>
     <Reference Include="PostSharp.Laos, Version=1.0.8.316, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(POSTSHARP15_SRC)\Laos\PostSharp.Laos\bin\debug\PostSharp.Laos.dll</HintPath>
     </Reference>
     <Reference Include="PostSharp.Public, Version=1.0.8.316, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(POSTSHARP15_SRC)\Laos\PostSharp.Laos\bin\debug\PostSharp.Public.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -75,6 +77,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
+  
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
