--- a/DesignByContract/DemoDbC/DemoDbC.csproj
+++ b/DesignByContract/DemoDbC/DemoDbC.csproj
@@ -40,8 +40,14 @@
       <HintPath>..\..\..\postsharp-user-plugins\DesignByContract\Aspect.DesignByContract\bin\Debug\Aspect.DesignByContract.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.2.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
-    <Reference Include="PostSharp.Laos, Version=1.5.0.0, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL" />
-    <Reference Include="PostSharp.Public, Version=1.5.0.0, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL" />
+    <Reference Include="PostSharp.Laos, Version=1.5.0.0, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
+      <SpecificVersion>True</SpecificVersion>
+      <HintPath>$(POSTSHARP15_SRC)\Laos\PostSharp.Laos\bin\debug\PostSharp.Laos.dll</HintPath>
+    </Reference>
+    <Reference Include="PostSharp.Public, Version=1.5.0.0, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
+      <SpecificVersion>True</SpecificVersion>
+      <HintPath>$(POSTSHARP15_SRC)\Laos\PostSharp.Laos\bin\debug\PostSharp.Public.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -73,13 +79,20 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
+  <PropertyGroup>
+    <_PostSharpTargets>$(POSTSHARP15_SRC)\Core\PostSharp.MSBuild\bin\debug\PostSharp-1.5.targets</_PostSharpTargets>
+    <DontImportPostSharp Condition="Exists('$(_PostSharpTargets)')">True</DontImportPostSharp>
+    <ReferencePath>$(POSTSHARP15_SRC)\Laos\PostSharp.Laos.Weaver\bin\debug</ReferencePath>
+  </PropertyGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(_PostSharpTargets)" Condition="Exists('$(_PostSharpTargets)')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
