--- a/1.5/Torch/DesignByContract.Demo/DesignByContract.Demo.csproj
+++ b/1.5/Torch/DesignByContract.Demo/DesignByContract.Demo.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{6BADCD67-D169-484D-B3CF-1F4F4107542C}</ProjectGuid>
+    <ProjectGuid>{B1966003-4A7D-4977-BD1F-C38F93BA3CAE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Torch.DesignByContract.Weaver</RootNamespace>
-    <AssemblyName>Torch.DesignByContract.Weaver</AssemblyName>
+    <RootNamespace>DesignByContract.Demo</RootNamespace>
+    <AssemblyName>DesignByContract.Demo</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,9 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PostSharp.Core, Version=1.5.0.0, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
-      <HintPath>$(POSTSHARP15_SRC)\Core\PostSharp.Core\bin\debug\PostSharp.Core.dll</HintPath>
-    </Reference>
+    <Reference Include="nunit.framework, Version=2.2.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="PostSharp.Public, Version=1.5.0.0, Culture=neutral, PublicKeyToken=b13fd38b8f9c99d7, processorArchitecture=MSIL">
       <HintPath>$(POSTSHARP15_SRC)\Core\PostSharp.Public\bin\debug\PostSharp.Public.dll</HintPath>
     </Reference>
@@ -44,20 +42,18 @@
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data.DataSetExtensions">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CheckNonEmptyTask.cs" />
-    <Compile Include="CheckNonNullTask.cs" />
-    <Compile Include="CheckSingletonTask.cs" />
-    <Compile Include="NonEmptyParameterAdvice.cs" />
-    <Compile Include="NonEmptyReturnAdvice.cs" />
-    <Compile Include="NonNullParameterAdvice.cs" />
-    <Compile Include="NonNullReturnAdvice.cs" />
+    <Compile Include="Contact.cs" />
+    <Compile Include="Diary.cs" />
+    <Compile Include="IDiary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SingletonAccessorAdvice.cs" />
-    <Compile Include="SingletonAdvice.cs" />
+    <Compile Include="Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DesignByContract\DesignByContract.csproj">
@@ -65,15 +61,14 @@
       <Name>DesignByContract</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="Torch.DesignByContract.psplugin">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-
-
+  <PropertyGroup>
+    <ReferencePath>..\DesignByContract.Weaver\bin\debug</ReferencePath>
+    <_PostSharpTargets>$(POSTSHARP15_SRC)\Core\PostSharp.MSBuild\bin\debug\PostSharp-1.5.targets</_PostSharpTargets>
+    <DontImportPostSharp Condition="Exists('$(_PostSharpTargets)')">True</DontImportPostSharp>
+  </PropertyGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 
+  <Import Project="$(_PostSharpTargets)" Condition="Exists('$(_PostSharpTargets)')"/>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
@@ -81,8 +76,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
 </Project>
