Corrected bug in TemplateParser.IsStringParameter. Removed references to System.Core.

--- a/1.5/Log4PostSharp/Log4PostSharp.Weaver/Log4PostSharp.Weaver.csproj
+++ b/1.5/Log4PostSharp/Log4PostSharp.Weaver/Log4PostSharp.Weaver.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{76E28658-EF7A-4695-9C8E-5AA9E5D9B494}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -48,9 +48,6 @@
       <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -70,6 +67,7 @@
     <ProjectReference Include="..\Log4PostSharp\Log4PostSharp.csproj">
       <Project>{3CFD766D-B991-4444-84A6-49BDFF81CF63}</Project>
       <Name>Log4PostSharp</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
