--- a/1.5/Log4PostSharp/Log4PostSharp/Log4PostSharp.csproj
+++ b/1.5/Log4PostSharp/Log4PostSharp/Log4PostSharp.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{3CFD766D-B991-4444-84A6-49BDFF81CF63}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -45,13 +45,11 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Func.cs" />
     <Compile Include="LogAttribute.cs" />
     <Compile Include="LoggerAttribute.cs" />
     <Compile Include="LoggerHelper.cs" />
