Added unit tests for LogAttribute.

--- a/1.5/Log4PostSharp/Log4PostSharp.Test/Log4PostSharp.Test.csproj
+++ b/1.5/Log4PostSharp/Log4PostSharp.Test/Log4PostSharp.Test.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LogAttributeTest.cs" />
     <Compile Include="LoggerAttributeTest.cs" />
     <Compile Include="LoggerPolicyAttributeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
