--- a/1.5/Log4PostSharp/Log4PostSharp.TestApp/Log4PostSharp.TestApp.csproj
+++ b/1.5/Log4PostSharp/Log4PostSharp.TestApp/Log4PostSharp.TestApp.csproj
@@ -79,11 +79,11 @@
        in the source tree. If this file is in a binary distribution, the
        section below will not be executed. Instead, PostSharp should already
        have been integrated in the default MSBuild process.                       -->
-  <PropertyGroup Condition=" Exists('$(POSTSHARP_SRC)\Core\PostSharp.MSBuild\bin\debug\PostSharp.targets') ">
+  <PropertyGroup Condition=" Exists('$(POSTSHARP_SRC)\Core\PostSharp.MSBuild\bin\Release\PostSharp-1.5.targets') ">
     <DontImportPostSharp>True</DontImportPostSharp>
-    <PostSharpDirectory>$(POSTSHARP_SRC)\Core\PostSharp.MSBuild\bin\debug\</PostSharpDirectory>
+    <PostSharpDirectory>$(POSTSHARP_SRC)\Core\PostSharp.MSBuild\bin\Release\</PostSharpDirectory>
     <PostSharpUseCommandLine>True</PostSharpUseCommandLine>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(PostSharpDirectory)PostSharp.targets" Condition=" Exists('$(PostSharpDirectory)PostSharp.targets') " />
+  <Import Project="$(PostSharpDirectory)PostSharp-1.5.targets" />
 </Project>
