--- a/2.0/Log4PostSharp/Log4PostSharpDemo/app.config
+++ b/2.0/Log4PostSharp/Log4PostSharpDemo/app.config
@@ -14,4 +14,4 @@
 			<appender-ref ref="MainAppender"/>
 		</root>
 	</log4net>
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
